fixed responsive menu on mobile

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1643,21 +1643,27 @@ input {
 
 .nav {
   background-color: #3C3F5B;
-  height: 60px;
   margin-bottom: 2rem; }
   .nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center; }
     .nav ul li {
       padding: 0 5px;
-      position: relative; }
-    .nav ul li:not(:first-child)::before {
+      position: relative;
+      overflow: hidden; }
+  .nav a {
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px 0; }
+    .nav a:not(:first-child) li::before {
       content: "";
       position: absolute;
       top: 0;
@@ -1665,13 +1671,6 @@ input {
       height: 100%;
       width: 1px;
       background-color: #fff; }
-  .nav a {
-    overflow: hidden;
-    display: inline-block;
-    text-decoration: none;
-    position: relative;
-    text-align: center;
-    vertical-align: middle; }
     .nav a span {
       position: relative;
       display: inline-block;
