--- a/client/src/components/Nav/_Nav.scss
+++ b/client/src/components/Nav/_Nav.scss
@@ -5,13 +5,13 @@ $nav-height: 60px;
 
 .nav {
   background-color: $purple;
-  height: $nav-height;
+  // height: $nav-height;
   margin-bottom: 2rem;
   ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    height: $nav-height;
+    // height: $nav-height;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -19,8 +19,17 @@ $nav-height: 60px;
     li {
       padding: 0 5px;
       position: relative;
+      overflow: hidden;
     }
-    li:not(:first-child)::before {
+  }
+  a {
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px 0;
+    &:not(:first-child) li::before {
       content: "";
       position: absolute;
       top: 0;
@@ -29,14 +38,6 @@ $nav-height: 60px;
       width: $border-width;
       background-color: $white;
     }
-  }
-  a {
-    overflow: hidden;
-    display: inline-block;
-    text-decoration: none;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
     span {
       position: relative;
       display: inline-block;
